# Visualizer

./: .gitignore  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  FileDialog.cpp  FileDialog.h  HighDpi.h  UIManager.cpp  UIManager.h  Visualizer.h  WaveformVisualizer.cpp  WaveformVisualizer.h  main.cpp
projectFiles/: ProjectReport.docx  Waveform visualizer pp project.pptx
